--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,8 +38,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.metro_trams"
+        applicationId "com.jimmywei.metro_trams"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
