--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,7 +34,9 @@ jobs:
     - run: flutter format --set-exit-if-changed .
     
     # Satisfies pubspec.yml as a required asset
-    - run: touch .env
+    - run: echo "API_KEY=$API_KEY" >> .env
+      env:
+        API_KEY: ${{ secrets.API_KEY }}
 
     # Statically analyze the Dart code for any errors.
     - run: flutter analyze .
@@ -42,7 +44,21 @@ jobs:
     # Run widget tests for our flutter project.
     - run: flutter test
     
-    # Build apk.
+    # Build apk
+    - run: flutter build apk
+      env:
+        KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
+        KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        ALIAS: ${{ secrets.ALIAS }}
+        KEY_PATH: ${{ steps.android_keystore.outputs.filePath }}
+
+    # Upload generated app to the artifacts.
+    - uses: actions/upload-artifact@v2
+      with:
+        name: release-apk
+        path: build/app/outputs/apk/release/app-release.apk
+
+    # Build app
     - run: flutter build appbundle
       env:
         KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -50,7 +66,7 @@ jobs:
         ALIAS: ${{ secrets.ALIAS }}
         KEY_PATH: ${{ steps.android_keystore.outputs.filePath }}
     
-    # Upload generated apk to the artifacts.
+    # Upload generated app to the artifacts.
     - uses: actions/upload-artifact@v2
       with:
         name: release-appbundle
